prompt refresh is working

--- a/BlazorDOS/Pages/Index.razor
+++ b/BlazorDOS/Pages/Index.razor
@@ -17,7 +17,7 @@
 {
     <div class="dos-prompt-container">
         <p class="prompt-label">C:></p>
-        <p class="dos-output">@priorInputs.PriorInput</p>
+        <p class="dos-output">@priorInput.PriorInput</p>
     </div>
 }
 <div class="dos-prompt-container">
