--- a/BlazorDOS/Shared/MainLayout.razor
+++ b/BlazorDOS/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
 ﻿@inherits LayoutComponentBase
-
+@inject NavigationManager NavManager;
 @*<div class="sidebar">
-    <NavMenu />
-</div>
-
-<div class="main">
-    <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <NavMenu />
     </div>
 
-    <div class="content px-4">
-        @Body
-    </div>
-</div>*@
+    <div class="main">
+        <div class="top-row px-4">
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        </div>
+
+        <div class="content px-4">
+            @Body
+        </div>
+    </div>*@
 
 @Body
