--- a/BlazorDOS/Shared/MainLayout.razor
+++ b/BlazorDOS/Shared/MainLayout.razor
@@ -13,5 +13,6 @@
             @Body
         </div>
     </div>*@
-
-@Body
+    <div class="load-container" id="dos-container">
+        @Body
+    </div>
