--- a/BlazorDOS/Pages/_Host.cshtml
+++ b/BlazorDOS/Pages/_Host.cshtml
@@ -28,12 +28,12 @@
     <link rel="stylesheet" type="text/css" href="css/win95.css">
     <link rel="stylesheet" type="text/css" href="css/dos.css">
 </head>
-<body class="load-container" id="dos-container">
-    <app>
+<body class="dos-body">
+    <app class="load-container">
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
 
-    <div id="blazor-error-ui">
+    @*<div id="blazor-error-ui">
         <environment include="Staging,Production" class="dos-output">
             An error has occurred. This application may no longer respond until reloaded.
         </environment>
@@ -42,7 +42,7 @@
         </environment>
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
-    </div>
+    </div>*@
 
     <script src="_framework/blazor.server.js"></script>
 </body>
