--- a/BlazorDOS/Pages/Index.razor
+++ b/BlazorDOS/Pages/Index.razor
@@ -1,5 +1,9 @@
 ﻿@page "/"
 @inject NavigationManager NavManager;
+@inject BlazorDOS.SendSMS SendSMS;
+@*@inject BlazorDOS.Commands.BaseCommands BaseCommands;*@
+@*@inject Microsoft.AspNetCore.Mvc.Rendering.TagBuilder TagBuilder;*@
+
 @*<h1>Hello, world!</h1>
 
     Welcome to your new app.
@@ -10,7 +14,7 @@
     <p class="dos-output">Matt Fry.IO [Version 2.0]</p>
 </div>
 <div class="dos-prompt-container">
-    <p class="dos-output">(C) Copyright 2019-2020 Matt Fry. All rights reserved.</p>
+    <p class="dos-output">(C) Copyright 2019-2021 Matt Fry. All rights reserved.</p>
 
 </div>
 
@@ -19,18 +23,42 @@
     <div class="dos-prompt-container">
         <p class="prompt-label">C:></p>
         <p class="dos-output">@priorInput.PriorInput</p>
-        
     </div>
+
+
+    @switch (priorInput.PriorInput.ToString())
+    {
+        case "help":
+            {
+                <HelpComponent></HelpComponent>
+            }
+            break;
+        case "sms":
+            {
+                <div class="dos-prompt-container">
+                    <p class="dos-output">Text Message Sent.</p>
+                </div>
+            }
+            break;
+        default:
+            {
+
+            }
+            break;
+    }
+
 }
+
 <div class="dos-prompt-container">
     <p class="prompt-label">C:></p>
-    <input type="text" id="dosPrompt" class="dos-prompt-input" @bind="priorPrompt"@onkeydown="@Enter" autofocus />
+    <input type="text" id="dosPrompt" class="dos-prompt-input" @bind="priorPrompt" @onkeydown="@Enter" autofocus />
 </div>
 
 @code{
     private IList<PriorInputs> priorInputs = new List<PriorInputs>();
     private string priorPrompt;
     private string dosResponse;
+    private string textMessage;
 
 
     //private void AddPriorPrompt()
@@ -52,9 +80,9 @@
                 {
                     NavManager.NavigateTo("/win95redirect");
                 }
-                else if (priorPrompt.ToLower() == "help")
+                else if (priorPrompt.ToLower() == "sms")
                 {
-                    HelpResponse();
+                    SendSMS.TextMsg("Hey Drew!  We heard about your small penis, so we are offering 50% off on ULTRA MAX PENIS PILLS 5000 XL! Regular Price $39.99 ");
                     priorInputs.Add(new PriorInputs { PriorInput = priorPrompt });
                     priorPrompt = string.Empty;
                 }
@@ -67,10 +95,6 @@
         }
     }
 
-    public string HelpResponse()
-    {
-        dosResponse = "< p class='dos-output'>This portion of the page is a work in progress!  Just type 'win' at the prompt below.</p>";
-        return dosResponse;
-    }
+
 
 }
