maybe I'll work on this before my next vacation!

--- a/BlazorDOS/Pages/_Host.cshtml
+++ b/BlazorDOS/Pages/_Host.cshtml
@@ -15,13 +15,13 @@
     <meta property="og:image" content="assets/preview.png" />
 
     <meta property="og:url" content="www.mattfry.io" />
-    <meta property="og:title" content="Command Prompt - Matt Fry.IO" />
+    <meta property="og:title" content="Web Prompt [Version 2.0] - Matt Fry.IO" />
     <meta property="og:description" content="The personal portfolio page for me, Matt Fry, a Blue Prism Certified RPA Developer,
     Full Stack Web Developer with experience in both Java and .NET.  Sometimes I like to pretend I'm Warren Buffet and make wild trades on Robinhood." />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazorDOS</title>
+    <title>Web Prompt [Version 2.0]</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
