--- a/BlazorDOS/Pages/Index.razor
+++ b/BlazorDOS/Pages/Index.razor
@@ -7,10 +7,10 @@
 
 
 <div class="dos-prompt-container">
-    <p class="dos-output">Matt Fry.IO [Version 2.0]</p>
+    <p class="dos-output">Web Prompt [Version 2.0]</p>
 </div>
 <div class="dos-prompt-container">
-    <p class="dos-output">(C) Copyright 2019-2021 Matt Fry. All rights reserved.</p>
+    <p class="dos-output">(C) Copyright 2019-2021 Matt Fry, MattFry.IO All rights reserved.</p>
 
 </div>
 
